# ontoagain

./: .env.example  .gitignore  EXPLAINER.md  README.md  pyproject.toml  sample_config.yaml
benchmarks/: __init__.py  bc5cdr.py  cid.obo  cid_config.yaml  mesh_config.yaml
ontoagain/: __init__.py  cli.py  disambiguate.py  identify.py  index.py  llm.py  models.py  recommend.py  relate.py  xml_utils.py
ontoagain/prompts/: disambiguate.txt  disambiguate_batch.txt  extract_context.txt  identify.txt  recommend.txt  relate_disambiguate.txt  relate_extract.txt
tests/: test_async.py  test_index.py  test_parsing.py  test_relate.py
tests/fixtures/: sample_paper.txt
