[project]
name = "ontoagain"
version = "0.1.0"
description = "LLM-powered ontology term identification and disambiguation for scientific papers"
readme = "README.md"
authors = [
    { email = "5115845+dauglyon@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "instructor>=1.13.0",
    "lancedb>=0.26.0",
    "litellm>=1.80.11",
    "oaklib>=0.6.23",
    "pronto>=2.7.2",
    "pydantic>=2.12.5",
    "pylance>=1.0.1",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.0",
    "typer>=0.21.0",
]

[project.scripts]
onto = "ontoagain.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ontoagain"]

[dependency-groups]
dev = [
    "ontogpt>=1.0.18",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
